--- a/client/package.json
+++ b/client/package.json
@@ -69,6 +69,7 @@
     "mongoose": "^7.3.4",
     "next": "13.4.10",
     "next-auth": "^4.22.1",
+    "next-themes": "^0.4.6",
     "nodemailer": "^6.9.5",
     "postcss": "8.4.26",
     "react": "18.2.0",
