--- a/client/package.json
+++ b/client/package.json
@@ -59,12 +59,12 @@
     "cryptr": "^6.3.0",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
-    "framer-motion": "latest",
+    "framer-motion": "^12.23.12",
     "geist": "^1.3.1",
     "input-otp": "1.4.1",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
-    "lucide-react": "^0.539.0",
+    "lucide-react": "^0.454.0",
     "mongodb": "^5.7.0",
     "mongoose": "^7.3.4",
     "next": "13.4.10",
@@ -73,7 +73,7 @@
     "nodemailer": "^6.9.5",
     "postcss": "8.4.26",
     "react": "18.2.0",
-    "react-day-picker": "9.8.0",
+    "react-day-picker": "^9.8.1",
     "react-dom": "18.2.0",
     "react-email": "1.9.4",
     "react-hook-form": "^7.60.0",
@@ -82,13 +82,15 @@
     "recharts": "latest",
     "rippleui": "^1.12.1",
     "sonner": "^1.7.4",
-    "tailwind-merge": "^3.3.1",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
+    "typescript": "5.1.6",
     "vaul": "^0.9.9",
     "zod": "3.25.67"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.11",
+    "@tailwindcss/postcss": "^4.1.9",
     "@types/bcryptjs": "^2.4.2",
     "@types/jwt-decode": "^2.2.1",
     "@types/node": "^22",
@@ -96,8 +98,6 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "postcss": "^8.5",
-    "tailwindcss": "^4.1.9",
-    "tw-animate-css": "1.3.3",
-    "typescript": "^5"
+    "tw-animate-css": "1.3.3"
   }
 }
