--- a/server/package.json
+++ b/server/package.json
@@ -8,16 +8,19 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "cloudinary": "^2.7.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "express-rate-limit": "^8.0.1",
     "groq-sdk": "^0.30.0",
     "helmet": "^6.0.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.3.0",
     "morgan": "^1.10.0",
+    "nodemailer": "^7.0.5",
     "razorpay": "^2.9.6"
   },
   "devDependencies": {
